--- a/app/index.html
+++ b/app/index.html
@@ -146,7 +146,7 @@
 
 <body>
     <div class='container' id='container'>
-        <h1>User profile New</h1>
+        <h1>User profile</h1>
         <img src='profile-picture' alt="user-profile">
         <span>Name: </span><h3 id='name'>Docker Demo</h3>
         <hr />
